--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&amp;subset=cyrillic,latin-ext');
+
 /* ----------------------- */
 /* App Components */
 /* ----------------------- */
 
 .App{
+  font-family: -apple-system, BlinkMacSystemFont, "Noto Sans", "Segoe UI", "Roboto", "Oxygen",
+  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  sans-serif;
   background-image: url("img/DLA_Background_Navy.png");
   background-repeat: repeat;
   background-position: center;
@@ -17,10 +22,6 @@
   margin-top: 5vmin;
 }
 
-.navbar{
-  min-height: 5vh;
-}
-
 .App-header,
 .App-footer {
   min-height: 5vh;
@@ -30,12 +31,25 @@
   font-size: calc(12px + .5vmin);
 }
 
+h1{
+  font-size: calc(20px + 1.5vmin);
+}
+
+hr{
+  width: 80%;
+}
+
+a:hover{
+  text-decoration: none;
+  color: gray;
+  transition: 0.1s ease-in;
+}
+
 .container{
   min-height: 100vh;
 }
 
 .App-main{
-/*   min-height: 50vh; */
   padding: 5vh;
   background:#f9f9f9;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
@@ -44,27 +58,8 @@
 }
 
 /* ----------------------- */
-/* Wrappers and Containers */
+/* Footer */
 /* ----------------------- */
-
-.associate-grid-container{
-/*   max-width:40vw; */
-  min-height: 30vh;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  row-gap: 2em;
-  column-gap: 5em;
-}
-
-.media{
-  max-width: 240px;
-  min-width: 240px;
-}
-
-.filter-grid-container{
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-}
 
 .footer-grid-container{
   display: flex;
@@ -80,15 +75,29 @@
   margin: 2vmin;
 }
 
-a:hover{
-  text-decoration: none;
-  color: gray;
-  transition: 0.1s ease-in;
+ /* ----------------------- */
+/* Associate */
+/* ----------------------- */
+
+.associate-grid-container{
+    min-height: 30vh;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    row-gap: 2em;
+    column-gap: 5em;
+  }
+
+.assoc-info-header{
+  font-size: calc(11.8px + .5vmin);
+}
+.assoc-info-text{
+  font-size: calc(10px + .5vmin);
 }
 
-label{ /*Make more specific*/
+.assoc-info {
   display: block;
-  font-size: calc(10.8px + .5vmin);
+  padding-left: 0;
+  background-color: transparent;
 }
 
 .associate-photo-wrapper{
@@ -108,20 +117,33 @@ label{ /*Make more specific*/
   background-size: cover;
   background-position: top center;
   background-repeat: no-repeat;
-  background-color: black;
+  background-color: #16253f;
   width: 25vh;
   height: 25vh;
 }
 
-h1{
-  font-size: calc(20px + 1.5vmin);
+ /* ----------------------- */
+/* Filter */
+/* ----------------------- */
+
+.filter-grid-container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
+
+ /* ----------------------- */
+/* Media */
+/* ----------------------- */
+
 .media{
+  max-width: 240px;
+  min-width: 240px;
   margin:0;
 }
 
 .media-header-wrapper{
   text-align: center;
+  margin-bottom: 3vmin;
 }
 
 .media-body{
@@ -135,6 +157,10 @@ h1{
   align-items: center; 
 }
 
+ /* ----------------------- */
+/* Bio */
+/* ----------------------- */
+
 #bio-section{
   max-height: 20vmin;
   font-size: calc(11px + .5vmin);
@@ -147,36 +173,39 @@ h1{
   margin: 3vmin 0;
 }
 
-.dropdown-toggle .nav-link:hover{
-  color: #16253f;
-}
-
-hr{
-  width: 80%;
-}
+/* ----------------------- */
+/* Welcome */
+/* ----------------------- */
 
 .welcome-container{
   text-align: center;
   padding: 0 10%;
 }
 
-.directory-button-container{
-  text-align: center;
-}
-
 /* ----------------------- */
 /* Buttons */
 /* ----------------------- */
+
+.directory-button-container{
+  text-align: center;
+}
 
 .directory-nav-button{
   display: inline-block;
   margin: 3vmin;
   min-width: 100px;
 }
+.btn-primary{
+  max-height: 38px;
+}
 
 /* ----------------------- */
 /* Nav */
 /* ----------------------- */
+
+.navbar{
+  min-height: 5vh;
+}
 
 .nav-link{
   display: inline;
@@ -203,6 +232,10 @@ hr{
   color:#7d7d7d;
 }
 
+.dropdown-toggle .nav-link:hover{
+  color: #16253f;
+}
+
 .dropdown-option:hover{
   background-color:#7d7d7d;
 }
@@ -221,11 +254,9 @@ hr{
                                   supported by Chrome and Opera */
 }
 
-.filter-control-wrapper{
-  /* margin-bottom: 10vmin; */
-  transition: opacity 0.5s;
-  opacity: 1;
-}
+ /* ----------------------- */
+/* Office */
+/* ----------------------- */
 
 #office-modal-btn{
   border-bottom-left-radius: 0px;
@@ -235,4 +266,74 @@ hr{
 #office-select{
   border-bottom-right-radius: 0px;
   border-top-right-radius: 0px;
+}
+
+ /* ----------------------- */
+/* Auto Suggest */
+/* ----------------------- */
+
+.react-autosuggest__container {
+  position: relative;
+}
+.react-autosuggest__suggestion{
+  font-family: -apple-system, BlinkMacSystemFont, "Noto Sans", "Segoe UI", "Roboto", "Oxygen",
+  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  sans-serif;
+}
+.react-autosuggest__input {
+  height: 38px;
+  width: 40vw;
+  padding: 10px 20px;
+  font-family: -apple-system, BlinkMacSystemFont, "Noto Sans", "Segoe UI", "Roboto", "Oxygen",
+  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  border: 1px solid #aaa;
+  border-radius: 4px;
+  border-bottom-right-radius: 0px;
+  border-top-right-radius: 0px;
+}
+
+.react-autosuggest__input--focused {
+  outline: none;
+}
+
+.react-autosuggest__input--open {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.react-autosuggest__suggestions-container {
+  display: none;
+}
+
+.react-autosuggest__suggestions-container--open {
+  font-family: -apple-system, BlinkMacSystemFont, "Noto Sans", "Segoe UI", "Roboto", "Oxygen",
+  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  sans-serif;
+  display: block;
+  position: absolute;
+  width: 40vw;
+  border: 1px solid #aaa;
+  background-color: #fff;
+  font-weight: 300;
+  font-size: 16px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.react-autosuggest__suggestions-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.react-autosuggest__suggestion {
+  cursor: pointer;
+  padding: 1.5vmin 2vmin;
+}
+
+.react-autosuggest__suggestion--highlighted {
+  background-color: #ddd;
 }
