Change Nav, change spacing, change grid layout

--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ h1{
 }
 
 hr{
-  width: 80%;
+  width: 40%;
 }
 
 a:hover{
@@ -50,11 +50,21 @@ a:hover{
 }
 
 .App-main{
-  padding: 5vh;
+  padding: 3vmin;
   background:#f9f9f9;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-  margin: 5vmin auto;
+  margin: 2vmin auto;
   border-radius: 10px;
+}
+
+.no-select {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
 
 /* ----------------------- */
@@ -79,23 +89,36 @@ a:hover{
 /* Associate */
 /* ----------------------- */
 
+.associate-grid-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(240px, auto)) ;
+    row-gap: 2em;
+    column-gap: 5em;
+  }
+
+.associate-photo-wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+}
+
+.associate-media-wrapper{
+  padding: 0;
+  display: flex;
+  justify-content: left;
+  align-items: center; 
+}
+
 .name-text-wrapper{
   display: flex;
   justify-content: center;
   align-items: center; 
 }
 
-.associate-grid-container{
-    min-height: 30vh;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-    row-gap: 2em;
-    column-gap: 5em;
-  }
-
 .assoc-info-header{
   font-size: calc(11.8px + .5vh);
 }
+
 .assoc-info-text{
   font-size: calc(10px + .5vh);
 }
@@ -104,13 +127,6 @@ a:hover{
   display: block;
   padding-left: 0;
   background-color: transparent;
-}
-
-.associate-photo-wrapper{
-  display: flex;
-  justify-content: center;
-  align-items: center; 
-  padding: 15% 0;
 }
 
 .associate-photo-custom-thumbnail{
@@ -125,8 +141,8 @@ a:hover{
   background-position: top center;
   background-repeat: no-repeat;
   background-color: #16253f;
-  width: 240px;
-  height: 240px;
+  width: 180px;
+  height: 180px;
 }
 
  /* ----------------------- */
@@ -139,37 +155,12 @@ a:hover{
 }
 
  /* ----------------------- */
-/* Media */
-/* ----------------------- */
-
-.media{
-  max-width: 240px;
-  min-width: 240px;
-  margin:0;
-}
-
-.media-header-wrapper{
-  text-align: center;
-  margin-bottom: 3vmin;
-}
-
-.media-body{
-  width:100%;
-}
-
-.media-wrapper{
-  padding: 3vmin 0;
-  display: flex;
-  justify-content: center;
-  align-items: center; 
-}
-
- /* ----------------------- */
 /* Bio */
 /* ----------------------- */
 
 #bio-section{
-  max-height: 20vmin;
+  max-height: 18vmin;
+  min-height: 18vmin;
   font-size: calc(11px + .5vmin);
   white-space: pre-wrap;
   overflow-y: auto;
@@ -177,7 +168,7 @@ a:hover{
 
 #bio-header, 
 #bio-section{
-  margin: 3vmin 0;
+  margin: 2vmin 0;
 }
 
 /* ----------------------- */
@@ -199,7 +190,10 @@ a:hover{
 
 .directory-nav-button{
   display: inline-block;
-  margin: 3vmin;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 3vmin;
+  margin-right: 3vmin;
   min-width: 100px;
 }
 .btn-primary{
@@ -212,6 +206,7 @@ a:hover{
 
 .navbar{
   min-height: 5vh;
+  margin-bottom: 2vmin;
 }
 
 .nav-link{
@@ -222,43 +217,10 @@ a:hover{
   margin: 0 3vmin;
 }
 
-.nav-item a{
-  color: #212529;
-}
-
-.navbar-light .navbar-nav .nav-link {
-  color: #212529;
-}
-
-.brand-header{
-  font-size: calc(10px + 1.5vmin);
-  color: #212529;
-}
-
-.nav-option:hover{
-  color:#7d7d7d;
-}
-
-.dropdown-toggle .nav-link:hover{
-  color: #16253f;
-}
-
-.dropdown-option:hover{
-  background-color:#7d7d7d;
-}
-
-.dropdown-option:hover{
-  color:white;
-}
-
-.no-select {
-  -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome and Opera */
+.navbar-brand, 
+.brand-text{
+  color: white;
+  font-size: calc(18px + .5vmin);
 }
 
  /* ----------------------- */
