--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,9 @@
 }
 
 hr{
+  clear:both;
+  display:block;               
+  height: 1px;
   width:40%;
 }
 
@@ -201,6 +204,10 @@ a:hover{
   text-align: center;
 }
 
+.welcome-button{
+  /* float: right; */
+}
+
 .directory-nav-button{
   display: inline-block;
   margin-top: 0;
@@ -210,8 +217,10 @@ a:hover{
   min-width: 100px;
 }
 .btn-primary{
-  max-height: 38px;
+  /* max-height: 38px; */
 }
+
+
 
 /* ----------------------- */
 /* Nav */
@@ -248,6 +257,10 @@ a:hover{
 #office-select{
   border-bottom-right-radius: 0px;
   border-top-right-radius: 0px;
+}
+
+.office-phone{
+  margin-right: 1vmin;
 }
 
  /* ----------------------- */
