--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   font-family: -apple-system, BlinkMacSystemFont, "Noto Sans", "Segoe UI", "Roboto", "Oxygen",
   "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
   sans-serif;
-  background-image: url("img/DLA_Background_Navy.jpg");
+  background-image: url("img/Trees_Background_Monochromatic.jpg");
   background-repeat: repeat;
   background-position: center;
   background-attachment: fixed;
@@ -332,4 +332,8 @@ a:hover{
 
 .react-autosuggest__suggestion--highlighted {
   background-color: #ddd;
+}
+
+.view-all-app-filter{
+  visibility: hidden;
 }
