Updated for local testing.

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   font-family: -apple-system, BlinkMacSystemFont, "Noto Sans", "Segoe UI", "Roboto", "Oxygen",
   "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
   sans-serif;
-  background-image: url("img/Trees_Background_Monochromatic.jpg");
+  background-image: url("img/DLA_Background_Navy.jpg");
   background-repeat: repeat;
   background-position: center;
   background-attachment: fixed;
